Added media queries. Fixed download zindex issue.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- // Intro -->
     <header>
-
+        <a href="resume.pdf" class="btn download" download>Download PDF</a>
         <nav>
             <a href="#about">About</a>
             <a href="#work">Work Experience</a>
@@ -38,8 +38,6 @@
                 </ul>
             </div>
         </div>
-
-        <a href="resume.pdf" class="btn download" download>Download PDF</a>
     </header>
 
     <main role="main">
@@ -174,7 +172,9 @@
                 <p>Young Leadership Program</p>
 
                 <!-- Add as many paragraphs as you need. -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                <div class="edu-description">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                </div>
                 <!-- End of school details. -->
 
                 <!-- School details: copy this whole block to add more schools. -->
@@ -182,9 +182,12 @@
                 <p>Bachelor's Degree in Computer Science</p>
 
                 <!-- Add as many paragraphs as you need. -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                <div class="edu-description">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                </div>
                 <!-- End of school details. -->
 
                 <!-- School details: copy this whole block to add more schools. -->
@@ -192,7 +195,10 @@
                 <p>Intermediate</p>
 
                 <!-- Add as many paragraphs as you need. -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                <div class="edu-description">
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                </div>
                 <!-- End of school details. -->
 
                 <!-- School details: copy this whole block to add more schools. -->
@@ -200,9 +206,12 @@
                 <p>High School</p>
 
                 <!-- Add as many paragraphs as you need. -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                <div class="edu-description">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos, error quibusdam provident placeat natus. Fugiat, possimus rem atque asperiores eaque officiis aperiam eligendi dolores, pariatur, cumque harum perspiciatis expedita.</p>
+                </div>
 
                 <!-- End of school details. -->
             </div>
@@ -217,9 +226,9 @@
             <!-- Social media and contact links. Add or remove any networks. -->
             <div class="content-info">
                 <nav role="navigation">
-                    <a href="mailto:raghavendradeeduvanu@gmail.com"><i class="fas fa-envelope-open fa-2x"></i></a>
+                    <a href="mailto:raghavendradeeduvanu@gmail.com"><i class="fas fa-envelope-open fa-2x icon"></i></a>
                     <a href="https://my-website-e5987.web.app" target="_blank">rdee.xyz</a>
-                    <a href="https://www.linkedin.com/in/raghavendradeeduvanu" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.linkedin.com/in/raghavendradeeduvanu" target="_blank"><i class="fab fa-linkedin fa-2x icon"></i></a>
                 </nav>
             </div>
 
